added images instead of placeholders

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     </div>
 
     <div class="carousel">
-        <img src="https://via.placeholder.com/800x300" class="active">
-        <img src="https://via.placeholder.com/800x300/ff0000">
-        <img src="https://via.placeholder.com/800x300/00ff00">
-        <img src="https://via.placeholder.com/800x300/0000ff">
+        <img src="https://farm3.staticflickr.com/2220/1572613671_7311098b76_z_d.jpg" class="active">
+        <img src="https://farm6.staticflickr.com/5590/14821526429_5c6ea60405_z_d.jpg">
+        <img src="https://farm7.staticflickr.com/6089/6115759179_86316c08ff_z_d.jpg">
+        <img src="https://farm2.staticflickr.com/1090/4595137268_0e3f2b9aa7_z_d.jpg">
     </div>
     <div class="carousel-buttons">
         <button id="prevButton">Previous</button>
