--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
         .checkbox input, .radio input {
             margin-right: 10px;
         }
+        .links {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+        .links a {
+            padding: 10px 20px;
+            background: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        .links a:hover {
+            background: #0056b3;
+        }
     </style>
 
     <!-- Heap Analytics Start -->
@@ -163,6 +179,10 @@
     <button class="accordion">Section 3</button>
     <div class="panel">
         <p>Content for section 3.</p>
+    </div>
+
+    <div class="links">
+        <a href="page.html">Go to Page</a>
     </div>
 </div>
 
