--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
 
 <div class="container">
-    <h1>Enhanced Sample UI</h1>
+    <h1>Sample website UI elements</h1>
     
     <label for="textInput">Text Input:</label>
     <input type="text" id="textInput" placeholder="Enter text here">
